--- a/remote/gateway/gateway/Dockerfile
+++ b/remote/gateway/gateway/Dockerfile
@@ -1,20 +1,32 @@
-# 1. OpenJDK 17 기반의 가벼운 Alpine 이미지 사용
-FROM openjdk:17-alpine
+# 1단계: 빌드 단계
+FROM gradle:7.6.0-jdk17-alpine AS builder
 
-# 2. 작업 디렉토리 생성
+# 작업 디렉토리 설정
 WORKDIR /gateway
 
-# 3. 빌드된 Spring Boot jar 파일 복사
-COPY build/libs/*.jar app.jar
+# 모든 파일 복사 (build.gradle, settings.gradle, src, etc.)
+COPY . .
 
-# 4. 필요한 경우 (시간대 설정 - 옵션)
+# Gradle Wrapper를 사용해 jar 빌드 (테스트 생략)
+RUN ./gradlew clean build -x test
+
+# 2단계: 실행 단계
+FROM openjdk:17-alpine
+
+# 작업 디렉토리 설정
+WORKDIR /gateway
+
+# 타임존 설정 (옵션)
 RUN apk add --no-cache tzdata \
     && cp /usr/share/zoneinfo/Asia/Seoul /etc/localtime \
     && echo "Asia/Seoul" > /etc/timezone \
     && apk del tzdata
 
-# 5. 실행
+# 빌드 단계에서 생성된 jar 복사
+COPY --from=builder /gateway/build/libs/*.jar app.jar
+
+# jar 실행
 ENTRYPOINT ["java", "-jar", "/gateway/app.jar"]
 
-# 6. (선택) 외부에 포트 오픈
+# 포트 오픈
 EXPOSE 8090
