--- a/remote/auth/auth/Dockerfile
+++ b/remote/auth/auth/Dockerfile
@@ -7,6 +7,9 @@ WORKDIR /auth
 # 모든 파일 복사 (build.gradle, settings.gradle, src, etc.)
 COPY . .
 
+# Gradle Wrapper 실행 권한 부여
+RUN chmod +x ./gradlew
+
 # Gradle Wrapper를 사용해 jar 빌드 (테스트 생략)
 RUN ./gradlew clean build -x test
 
