--- a/remote/logging/logging/src/main/resources/application.properties
+++ b/remote/logging/logging/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=logging
+
+# ?? ??
+server.port=8093
+
+# Reactive MongoDB
+spring.data.mongodb.uri=mongodb://localhost:27017/moca
+
+# Kafka ??
+app.kafka.bootstrap-servers=localhost:9092
+app.kafka.group-id=logging-service-group
+
+# ???? ???
+spring.main.allow-bean-definition-overriding=true
+
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
+spring.kafka.consumer.properties.spring.json.value.default.type=com.ssafy.logging.dto.TokenUsageEvent
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.ssafy.logging.dto
