--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,44 @@
 version: '3.8'
 
 services:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.3.0
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+    networks:
+      - backend
+
+  broker:
+    image: confluentinc/cp-kafka:7.3.0
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://<KAFKA_HOST>:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - backend
+
+  logging-service:
+    build: .
+    image: your-docker-registry/logging-service:latest
+    ports:
+      - "8093:8093"
+    depends_on:
+      - broker
+    volumes:
+      - ./application.properties:/app.properties:ro
+    environment:
+      SPRING_CONFIG_LOCATION: /app.properties
+    networks:
+      - backend
+
   db:
     image: postgres:15
     container_name: postgres-db
@@ -40,6 +78,7 @@ services:
       - redis
     environment:
       - SPRING_PROFILES_ACTIVE=local
+
   auth:
     build:
       context: ./remote/auth/auth
