feat: docker-compose에 llm정보 추가 && 기존 파이프라인 백업

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,20 @@ services:
       - gateway
     environment:
       - SPRING_PROFILES_ACTIVE=local
+  
+  llm:
+  build:
+    context: ./remote/llm/llm
+  container_name: llm-service
+  ports:
+    - "8092:8092"
+  networks:
+    - backend
+  depends_on:
+    - gateway
+  environment:
+    - OPENAI_API_KEY=${OPENAI_API_KEY}
+    - STREAM_BUFFER_SIZE=${STREAM_BUFFER_SIZE}
 
 volumes:
   postgres-data:
