--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,21 +10,27 @@ services:
     networks:
       - backend
 
-  broker:
-    image: confluentinc/cp-kafka:7.3.0
-    depends_on:
-      - zookeeper
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://<KAFKA_HOST>:9092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    networks:
-      - backend
-
+    broker:
+      image: confluentinc/cp-kafka:7.3.0
+      depends_on:
+        - zookeeper
+      ports:
+        - "9092:9092"
+      environment:
+        KAFKA_BROKER_ID: 1
+        KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+        KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+        KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092  # <KAFKA_HOST> → kafka (서비스 이름 또는 실제 IP)
+        KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      entrypoint: ["/bin/bash", "-c"]
+      command: >
+        "while ! nc -z zookeeper 2181; do
+          echo 'Waiting for ZooKeeper...';
+          sleep 1;
+        done;
+        /etc/confluent/docker/run"
+      networks:
+        - backend
   db:
     image: postgres:15
     container_name: postgres-db
