--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   nginx:
     image: nginx:alpine
+    container_name: nginx
     ports:
       - "80:80"
       - "443:443"
@@ -13,8 +14,10 @@ services:
       - gateway
     networks:
       - backend
+
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.0
+    container_name: zookeeper
     ports:
       - "2181:2181"
     environment:
@@ -24,6 +27,7 @@ services:
 
   broker:
     image: confluentinc/cp-kafka:7.3.0
+    container_name: kafka
     depends_on:
       - zookeeper
     ports:
@@ -32,7 +36,7 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092  # <KAFKA_HOST> → kafka (서비스 이름 또는 실제 IP)
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     entrypoint: ["/bin/bash", "-c"]
     command: >
@@ -43,8 +47,10 @@ services:
       /etc/confluent/docker/run"
     networks:
       - backend
+
   db:
     image: postgres:15
+    container_name: postgres-db
     restart: always
     ports:
       - "5432:5432"
@@ -59,6 +65,7 @@ services:
 
   redis:
     image: redis:7
+    container_name: redis
     restart: always
     ports:
       - "6379:6379"
@@ -70,6 +77,7 @@ services:
   gateway:
     build:
       context: ./remote/gateway/gateway 
+    container_name: gateway
     ports:
       - "8090:8090"
     networks:
@@ -78,11 +86,12 @@ services:
       - db
       - redis
     environment:
-      - SPRING_PROFILES_ACTIVE=local
+      - SPRING_PROFILES_ACTIVE=prod
 
   auth:
     build:
       context: ./remote/auth/auth
+    container_name: auth
     ports:
       - "8091:8091"
     networks:
@@ -97,6 +106,7 @@ services:
   llm:
     build:
       context: ./remote/llm/llm
+    container_name: llm
     ports:
       - "8092:8092"
     networks:
