feat: httpbin.org를 https->http로 수정

--- a/remote/gateway/gateway/src/main/resources/application-local.yml
+++ b/remote/gateway/gateway/src/main/resources/application-local.yml
@@ -26,7 +26,7 @@ spring:
             - Path=/logging/**
 
         - id: test-route
-          uri: https://httpbin.org
+          uri: http://httpbin.org
           predicates:
             - Path=/test/**
           filters:
