feat: jenkins파일 추가, docker-compose 파일수정, 각 서비스 dockerfile 수정

--- a/back/rag/Dockerfile
+++ b/back/rag/Dockerfile
@@ -1,9 +1,8 @@
-FROM python:3.10-slim
-
+FROM python:3.11-slim
+ENV PYTHONDONTWRITEBYTECODE=1 PYTHONUNBUFFERED=1
 WORKDIR /app
-
-COPY requirements.txt .
-RUN pip install --upgrade pip && pip install -r requirements.txt
-
-COPY . .
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8090", "--reload"]
+COPY app/requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+COPY app .
+EXPOSE 8090
+CMD ["uvicorn","app.main:app","--host","0.0.0.0","--port","8090"]
