--- a/back/scheduler/Dockerfile
+++ b/back/scheduler/Dockerfile
@@ -1,4 +1,13 @@
-FROM eclipse-temurin:17-jdk
+FROM eclipse-temurin:17-jdk AS build
+WORKDIR /workspace
+COPY gradlew* settings.gradle build.gradle gradle/ ./
+RUN ./gradlew dependencies --no-daemon
+COPY src ./src
+RUN ./gradlew bootJar --no-daemon
+
+FROM eclipse-temurin:17-jre
 WORKDIR /app
-COPY build/libs/*.jar app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
+COPY --from=build /workspace/build/libs/*.jar app.jar
+EXPOSE 8090
+HEALTHCHECK CMD curl -f http://localhost:8090/actuator/health || exit 1
+ENTRYPOINT ["java","-jar","/app/app.jar"]
