--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -4,9 +4,9 @@ services:
   nginx:
     image: nginx:alpine
     container_name: nginx
-    ports: ["80:80","443:443"]
+    ports: ["80:80", "443:443"]
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - /home/ubuntu/nginx/nginx.conf:/etc/nginx/nginx.conf:ro   # ← 절대경로
       - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on: [gateway]
     restart: always
@@ -16,21 +16,32 @@ services:
     build: ./back/gateway
     command: ["java","-jar","/app/app.jar","--spring.profiles.active=local"]
     ports: ["8000:8000"]
-    depends_on: [postgres]
 
   auth:
     container_name: auth-service
     build: ./back/auth
     command: ["java","-jar","/app/app.jar","--spring.profiles.active=local"]
     ports: ["8082:8082"]
-    depends_on: [postgres]
+    depends_on: [postgres_auth]
+    environment:
+      DB_HOST: postgres_auth
+      DB_PORT: 5432
+      DB_NAME: ${POSTGRES_AUTH_DB_NAME}
+      DB_USER: ${POSTGRES_AUTH_USER}
+      DB_PASSWORD: ${POSTGRES_AUTH_PASSWORD}
 
   scheduler:
     container_name: backend-service
     build: ./back/scheduler
     command: ["java","-jar","/app/app.jar","--spring.profiles.active=local"]
     ports: ["8083:8083"]
-    depends_on: [postgres]
+    depends_on: [postgres_sched]
+    environment:
+      DB_HOST: postgres_sched
+      DB_PORT: 5432
+      DB_NAME: ${POSTGRES_SCHED_DB_NAME}
+      DB_USER: ${POSTGRES_SCHED_USER}
+      DB_PASSWORD: ${POSTGRES_SCHED_PASSWORD}
 
   rag:
     container_name: rag-service
@@ -39,12 +50,28 @@ services:
     environment: { ENV: local }
     ports: ["8090:8090"]
 
-  postgres:
-    container_name: postgres
+  postgres_auth:
+    container_name: postgres-auth
     image: postgres:15
     env_file: .env.dev
+    environment:
+      POSTGRES_USER:     ${POSTGRES_AUTH_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_AUTH_PASSWORD}
+      POSTGRES_DB:       ${POSTGRES_AUTH_DB_NAME}
     ports: ["5432:5432"]
-    volumes: [pgdata:/var/lib/postgresql/data]
+    volumes: [pg_auth:/var/lib/postgresql/data]
+
+  postgres_sched:
+    container_name: postgres-sched
+    image: postgres:15
+    env_file: .env.dev
+    environment:
+      POSTGRES_USER:     ${POSTGRES_SCHED_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_SCHED_PASSWORD}
+      POSTGRES_DB:       ${POSTGRES_SCHED_DB_NAME}
+    ports: ["5433:5432"]
+    volumes: [pg_sched:/var/lib/postgresql/data]
 
 volumes:
-  pgdata:
+  pg_auth:
+  pg_sched:
