--- a/back/auth/Dockerfile
+++ b/back/auth/Dockerfile
@@ -1,29 +1,25 @@
-# =============== 1) Build Stage ===============================
-FROM eclipse-temurin:17-jdk AS build
+######################## 1) Build Stage ########################
+# Gradle 8.7 + JDK 17 이미지 → gradle-wrapper.jar 없어도 동작
+FROM gradle:8.7-jdk17 AS build
 WORKDIR /workspace
 
-# gradlew 및 빌드 설정 복사
-COPY gradlew* settings.gradle build.gradle gradle/ ./
+# 프로젝트 전체 복사 (gradle, src, settings 등)
+COPY . .
 
-# ★ gradlew 실행권한 부여 ────────────────
-RUN chmod +x gradlew
+# 의존 캐시 최적화: 먼저 설정 파일만으로 dependencies 다운로드
+RUN gradle dependencies --no-daemon
 
-# 의존성 사전 다운로드
-RUN ./gradlew dependencies --no-daemon
-
-# 애플리케이션 소스 복사 후 JAR 빌드
-COPY src ./src
-RUN ./gradlew bootJar --no-daemon
+# 전체 빌드
+RUN gradle bootJar --no-daemon
 
 
-# =============== 2) Runtime Stage =============================
+######################## 2) Runtime Stage ######################
 FROM eclipse-temurin:17-jre
 WORKDIR /app
 
-# 빌드된 JAR만 복사
+# 빌드 산출물만 복사
 COPY --from=build /workspace/build/libs/*.jar app.jar
 
 EXPOSE 8082
 HEALTHCHECK CMD curl -f http://localhost:8082/actuator/health || exit 1
-
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
