--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -6,7 +6,7 @@ services:
     container_name: nginx
     ports: ["80:80", "443:443"]
     volumes:
-      - /home/ubuntu/nginx/nginx.conf:/etc/nginx/nginx.conf:ro   # ← 절대경로
+      - /home/ubuntu/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on: [gateway]
     restart: always
@@ -41,12 +41,14 @@ services:
     container_name: postgres-auth
     image: postgres:15
     env_file: .env.prod
+    ports: ["5432:5432"]        # ← 외부에서도 auth DB 접속
     volumes: [pg_auth:/var/lib/postgresql/data]
 
   postgres_sched:
     container_name: postgres-sched
     image: postgres:15
     env_file: .env.prod
+    ports: ["5433:5432"]        # ← 외부에서도 sched DB 접속
     volumes: [pg_sched:/var/lib/postgresql/data]
 
 volumes:
