--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -5,9 +5,9 @@ services:
     image: nginx:alpine
     container_name: nginx
     ports: ["80:80", "443:443"]
+    # 로컬 테스트에선 레포 안의 conf 사용
     volumes:
-      - /home/ubuntu/nginx/nginx.conf:/etc/nginx/nginx.conf:ro   # ← 절대경로
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on: [gateway]
     restart: always
 
@@ -15,13 +15,15 @@ services:
     container_name: gateway-service
     build: ./back/gateway
     command: ["java","-jar","/app/app.jar","--spring.profiles.active=local"]
+    env_file: .env.dev
     ports: ["8000:8000"]
+    restart: always
 
   auth:
     container_name: auth-service
     build: ./back/auth
     command: ["java","-jar","/app/app.jar","--spring.profiles.active=local"]
-    ports: ["8082:8082"]
+    env_file: .env.dev
     depends_on: [postgres_auth]
     environment:
       DB_HOST: postgres_auth
@@ -29,12 +31,14 @@ services:
       DB_NAME: ${POSTGRES_AUTH_DB_NAME}
       DB_USER: ${POSTGRES_AUTH_USER}
       DB_PASSWORD: ${POSTGRES_AUTH_PASSWORD}
+    ports: ["8082:8082"]
+    restart: always
 
   scheduler:
     container_name: backend-service
     build: ./back/scheduler
     command: ["java","-jar","/app/app.jar","--spring.profiles.active=local"]
-    ports: ["8083:8083"]
+    env_file: .env.dev
     depends_on: [postgres_sched]
     environment:
       DB_HOST: postgres_sched
@@ -42,13 +46,17 @@ services:
       DB_NAME: ${POSTGRES_SCHED_DB_NAME}
       DB_USER: ${POSTGRES_SCHED_USER}
       DB_PASSWORD: ${POSTGRES_SCHED_PASSWORD}
+    ports: ["8083:8083"]
+    restart: always
 
   rag:
     container_name: rag-service
     build: ./back/rag
     command: ["uvicorn","app.main:app","--host","0.0.0.0","--port","8090"]
+    env_file: .env.dev
     environment: { ENV: local }
     ports: ["8090:8090"]
+    restart: always
 
   postgres_auth:
     container_name: postgres-auth
@@ -59,6 +67,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_AUTH_PASSWORD}
       POSTGRES_DB:       ${POSTGRES_AUTH_DB_NAME}
     ports: ["5432:5432"]
+    restart: always
     volumes: [pg_auth:/var/lib/postgresql/data]
 
   postgres_sched:
@@ -70,6 +79,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_SCHED_PASSWORD}
       POSTGRES_DB:       ${POSTGRES_SCHED_DB_NAME}
     ports: ["5433:5432"]
+    restart: always
     volumes: [pg_sched:/var/lib/postgresql/data]
 
 volumes:
