--- a/nginx.conf
+++ b/nginx.conf
@@ -1,24 +1,43 @@
-# HTTP 접근 시 HTTPS로 리다이렉션
-server {
-    listen 80;
-    server_name k12e201.p.ssafy.io;
+worker_processes  1;
+events { worker_connections  1024; }
 
-    return 301 https://$host$request_uri;
-}
+http {
+    # 로그 출력(선택)
+    access_log  /var/log/nginx/access.log;
+    error_log   /var/log/nginx/error.log;
 
-# HTTPS 접근 처리
-server {
-    listen 443 ssl;
-    server_name k12e201.p.ssafy.io;
+    # MIME, gzip 등 기본 포함
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    sendfile on;
 
-    ssl_certificate /etc/letsencrypt/live/k12e201.p.ssafy.io/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/k12e201.p.ssafy.io/privkey.pem;
+    ########################################################
+    # 1) 80 → 443 리다이렉트
+    server {
+        listen 80;
+        server_name k12e201.p.ssafy.io;
+        return 301 https://$host$request_uri;
+    }
 
-    location / {
-        proxy_pass http://gateway:8000;  
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    ########################################################
+    # 2) HTTPS 수신 → gateway:8000 전달
+    server {
+        listen 443 ssl;
+        server_name k12e201.p.ssafy.io;
+
+        ssl_certificate     /etc/letsencrypt/live/k12e201.p.ssafy.io/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/k12e201.p.ssafy.io/privkey.pem;
+
+        # (선택) 보안 설정
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+
+        location / {
+            proxy_pass         http://gateway:8000;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+        }
     }
 }
