--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -26,9 +26,9 @@ services:
     depends_on: [postgres_auth]
     restart: always
 
-  scheduler:
+  backend:
     container_name: backend-service
-    build: ./back/scheduler
+    build: ./back/backend
     command: ["java","-jar","/app/app.jar","--spring.profiles.active=prod"]
     env_file: .env.prod
     depends_on: [postgres_sched]
