--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -10,6 +10,8 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on: [gateway]
     restart: always
+    networks:
+      - web
 
   gateway:
     container_name: gateway-service
@@ -18,6 +20,9 @@ services:
     env_file: .env.dev
     ports: ["8000:8000"]
     restart: always
+    networks:
+      - web
+      - internal
 
   auth:
     container_name: auth-service
@@ -26,13 +31,15 @@ services:
     env_file: .env.dev
     depends_on: [postgres_auth]
     environment:
-      DB_HOST: postgres_auth
-      DB_PORT: 5432
-      DB_NAME: ${POSTGRES_AUTH_DB_NAME}
-      DB_USER: ${POSTGRES_AUTH_USER}
+      DB_HOST:     postgres_auth
+      DB_PORT:     5432
+      DB_NAME:     ${POSTGRES_AUTH_DB_NAME}
+      DB_USER:     ${POSTGRES_AUTH_USER}
       DB_PASSWORD: ${POSTGRES_AUTH_PASSWORD}
     ports: ["8082:8082"]
     restart: always
+    networks:
+      - internal
 
   backend:
     container_name: backend-service
@@ -41,13 +48,15 @@ services:
     env_file: .env.dev
     depends_on: [postgres_sched]
     environment:
-      DB_HOST: postgres_sched
-      DB_PORT: 5432
-      DB_NAME: ${POSTGRES_SCHED_DB_NAME}
-      DB_USER: ${POSTGRES_SCHED_USER}
+      DB_HOST:     postgres_sched
+      DB_PORT:     5432
+      DB_NAME:     ${POSTGRES_SCHED_DB_NAME}
+      DB_USER:     ${POSTGRES_SCHED_USER}
       DB_PASSWORD: ${POSTGRES_SCHED_PASSWORD}
     ports: ["8083:8083"]
     restart: always
+    networks:
+      - internal
 
   rag:
     container_name: rag-service
@@ -57,6 +66,8 @@ services:
     environment: { ENV: local }
     ports: ["8090:8090"]
     restart: always
+    networks:
+      - internal
 
   postgres_auth:
     container_name: postgres-auth
@@ -68,7 +79,10 @@ services:
       POSTGRES_DB:       ${POSTGRES_AUTH_DB_NAME}
     ports: ["5432:5432"]
     restart: always
-    volumes: [pg_auth:/var/lib/postgresql/data]
+    volumes:
+      - pg_auth:/var/lib/postgresql/data
+    networks:
+      - internal
 
   postgres_sched:
     container_name: postgres-sched
@@ -80,8 +94,17 @@ services:
       POSTGRES_DB:       ${POSTGRES_SCHED_DB_NAME}
     ports: ["5433:5432"]
     restart: always
-    volumes: [pg_sched:/var/lib/postgresql/data]
+    volumes:
+      - pg_sched:/var/lib/postgresql/data
+    networks:
+      - internal
 
 volumes:
   pg_auth:
   pg_sched:
+
+networks:
+  web:
+    driver: bridge
+  internal:
+    driver: bridge
