--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -10,13 +10,20 @@ services:
       - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on: [gateway]
     restart: always
+    networks:
+      - web
 
   gateway:
     container_name: gateway-service
     build: ./back/gateway
     command: ["java","-jar","/app/app.jar","--spring.profiles.active=prod"]
     env_file: .env.prod
+    ports:
+      - "127.0.0.1:8000:8000"
     restart: always
+    networks:
+      - web
+      - internal
 
   auth:
     container_name: auth-service
@@ -24,7 +31,11 @@ services:
     command: ["java","-jar","/app/app.jar","--spring.profiles.active=prod"]
     env_file: .env.prod
     depends_on: [postgres_auth]
+    ports:
+      - "127.0.0.1:8082:8082"
     restart: always
+    networks:
+      - internal
 
   backend:
     container_name: backend-service
@@ -32,14 +43,22 @@ services:
     command: ["java","-jar","/app/app.jar","--spring.profiles.active=prod"]
     env_file: .env.prod
     depends_on: [postgres_sched]
+    ports:
+      - "127.0.0.1:8083:8083"
     restart: always
+    networks:
+      - internal
 
   rag:
     container_name: rag-service
     build: ./back/rag
     command: ["uvicorn","app.main:app","--host","0.0.0.0","--port","8090"]
     env_file: .env.prod
+    ports:
+      - "127.0.0.1:8090:8090"
     restart: always
+    networks:
+      - internal
 
   postgres_auth:
     container_name: postgres-auth
@@ -51,7 +70,10 @@ services:
       POSTGRES_DB:       ${POSTGRES_AUTH_DB_NAME}
     ports: ["5432:5432"]
     restart: always
-    volumes: [pg_auth:/var/lib/postgresql/data]
+    volumes:
+      - pg_auth:/var/lib/postgresql/data
+    networks:
+      - internal
 
   postgres_sched:
     container_name: postgres-sched
@@ -63,8 +85,17 @@ services:
       POSTGRES_DB:       ${POSTGRES_SCHED_DB_NAME}
     ports: ["5433:5432"]
     restart: always
-    volumes: [pg_sched:/var/lib/postgresql/data]
+    volumes:
+      - pg_sched:/var/lib/postgresql/data
+    networks:
+      - internal
 
 volumes:
   pg_auth:
   pg_sched:
+
+networks:
+  web:
+    driver: bridge
+  internal:
+    driver: bridge
