chore : env 템플릿 파일 환경변수 추가

--- a/env.template
+++ b/env.template
@@ -1,22 +1,24 @@
-######  BASE (공통) DB  #########################################
-DB_HOST=
-DB_USER=
-DB_PASSWORD=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB_NAME=
-
-######  AUTH 서비스 전용 ########################################
+# database (auth)
 POSTGRES_AUTH_USER=
 POSTGRES_AUTH_PASSWORD=
 POSTGRES_AUTH_DB_NAME=
 
-######  SCHEDULER 서비스 전용 ###################################
+# database (scheduler)
 POSTGRES_SCHED_USER=
 POSTGRES_SCHED_PASSWORD=
 POSTGRES_SCHED_DB_NAME=
 
-######  SECRETS / ETC ###########################################
-JWT_SECRET=
+# AI keys
 OPENAI_API_KEY=
-ENV=local
+PINECONE_API_KEY=
+PINECONE_INDEX_NAME=
+CLAUDE_API_KEY=
+
+# GCP service account (for rag)
+GOOGLE_APPLICATION_CREDENTIALS=
+
+# Spring Boot
+SPRING_PROFILES_ACTIVE=
+
+# 앱 환경 구분 (local, test, prod)
+ENV=
