--- a/back/backend/build.gradle
+++ b/back/backend/build.gradle
@@ -42,6 +42,10 @@ dependencies {
 	implementation 'org.postgresql:postgresql:42.7.2'
 	// Spring Data JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// Hibernate Validator
+	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
+	// model mapper
+	implementation 'org.modelmapper:modelmapper:3.1.1'
 }
 
 tasks.named('test') {
