--- a/front/frontend/package.json
+++ b/front/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-native-camera-roll/camera-roll": "^7.10.0",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
+    "@react-navigation/stack": "^7.3.1",
     "axios": "^1.9.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
@@ -24,6 +25,9 @@
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-vector-icons": "^10.2.0",
+    "twrnc": "^4.6.1",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -39,6 +43,7 @@
     "@react-native/typescript-config": "0.79.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
