fix: rag docker파일 변경

--- a/back/rag/Dockerfile
+++ b/back/rag/Dockerfile
@@ -1,8 +1,20 @@
-FROM python:3.11-slim
-ENV PYTHONDONTWRITEBYTECODE=1 PYTHONUNBUFFERED=1
-WORKDIR /app
-COPY app/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-COPY app .
+# back/rag/Dockerfile
 
+FROM python:3.11-slim
+
+# 파이썬 설정
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
+
+WORKDIR /app
+
+# 1) requirements.txt 복사 및 설치
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# 2) 앱 코드 복사
+COPY app/ ./app
+
+
+# 4) 실행 커맨드
 CMD ["uvicorn","app.main:app","--host","0.0.0.0","--port","8090"]
