--- a/back/rag/Dockerfile
+++ b/back/rag/Dockerfile
@@ -1,20 +1,16 @@
-# back/rag/Dockerfile
-
 FROM python:3.11-slim
+
+# GCP 서비스 계정 키 경로 지정
 ENV GOOGLE_APPLICATION_CREDENTIALS=/app/gcp-key.json
-# 파이썬 설정
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-# 1) requirements.txt 복사 및 설치
-COPY requirements.txt .
+# requirements.txt 는 rag/requirements.txt 로 올라와 있어야 합니다.
+COPY requirements.txt .  
 RUN pip install --no-cache-dir -r requirements.txt
 
-# 2) 앱 코드 복사
 COPY app/ ./app
 
-
-# 4) 실행 커맨드
-CMD ["uvicorn","app.main:app","--host","0.0.0.0","--port","8090"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8090"]
