--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -4,11 +4,14 @@ services:
   nginx:
     image: nginx:alpine
     container_name: nginx
-    ports: ["80:80", "443:443"]
+    ports:
+      - "80:80"
+      - "443:443"
     volumes:
       - /home/ubuntu/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
-    depends_on: [gateway]
+    depends_on:
+      - gateway
     restart: always
     networks:
       - web
@@ -16,7 +19,11 @@ services:
   gateway:
     container_name: gateway-service
     build: ./back/gateway
-    command: ["java","-jar","/app/app.jar","--spring.profiles.active=prod"]
+    command:
+      - "java"
+      - "-jar"
+      - "/app/app.jar"
+      - "--spring.profiles.active=prod"
     env_file: .env.prod
     ports:
       - "127.0.0.1:8000:8000"
@@ -28,9 +35,14 @@ services:
   auth:
     container_name: auth-service
     build: ./back/auth
-    command: ["java","-jar","/app/app.jar","--spring.profiles.active=prod"]
+    command:
+      - "java"
+      - "-jar"
+      - "/app/app.jar"
+      - "--spring.profiles.active=prod"
     env_file: .env.prod
-    depends_on: [postgres_auth]
+    depends_on:
+      - postgres_auth
     ports:
       - "127.0.0.1:8082:8082"
     restart: always
@@ -40,9 +52,14 @@ services:
   backend:
     container_name: backend-service
     build: ./back/backend
-    command: ["java","-jar","/app/app.jar","--spring.profiles.active=prod"]
+    command:
+      - "java"
+      - "-jar"
+      - "/app/app.jar"
+      - "--spring.profiles.active=prod"
     env_file: .env.prod
-    depends_on: [postgres_sched]
+    depends_on:
+      - postgres_sched
     ports:
       - "127.0.0.1:8083:8083"
     restart: always
@@ -52,7 +69,13 @@ services:
   rag:
     container_name: rag-service
     build: ./back/rag
-    command: ["uvicorn","app.main:app","--host","0.0.0.0","--port","8090"]
+    command:
+      - "uvicorn"
+      - "app.main:app"
+      - "--host"
+      - "0.0.0.0"
+      - "--port"
+      - "8090"
     env_file: .env.prod
     volumes:
       - ./gcp-key.json:/app/gcp-key.json:ro
@@ -70,7 +93,8 @@ services:
       POSTGRES_USER:     ${POSTGRES_AUTH_USER}
       POSTGRES_PASSWORD: ${POSTGRES_AUTH_PASSWORD}
       POSTGRES_DB:       ${POSTGRES_AUTH_DB_NAME}
-    ports: ["5432:5432"]
+    ports:
+      - "5432:5432"
     restart: always
     volumes:
       - pg_auth:/var/lib/postgresql/data
@@ -85,7 +109,8 @@ services:
       POSTGRES_USER:     ${POSTGRES_SCHED_USER}
       POSTGRES_PASSWORD: ${POSTGRES_SCHED_PASSWORD}
       POSTGRES_DB:       ${POSTGRES_SCHED_DB_NAME}
-    ports: ["5433:5432"]
+    ports:
+      - "5433:5432"
     restart: always
     volumes:
       - pg_sched:/var/lib/postgresql/data
