fix : Dockerfile 변경 Dockerfile 변경, Docker Compose 변경 rag 서비스에서 볼륨 마운트 부분을 제거하고 Dockerfile에서 직접 파일을 복사하는 방식으로 변경, Jenkinsfile 변경

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -79,12 +79,7 @@ services:
     env_file: .env.prod
     environment:
       - GOOGLE_APPLICATION_CREDENTIALS=/app/gcp-key.json
-    volumes:
-      # 명시적으로 파일을 파일로 마운트 (디렉토리 대신)
-      - type: bind
-        source: ./gcp-key.json
-        target: /app/gcp-key.json
-        read_only: true
+    # volumes 섹션 제거 (Dockerfile에서 직접 복사)
     ports:
       - "127.0.0.1:8090:8090"
     restart: always
