refactor:image type 타입 변경

--- a/back/backend/build.gradle
+++ b/back/backend/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 	implementation 'org.modelmapper:modelmapper:3.1.1'
 	// dotenv-java 환경 변수 주입
 	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
+	// firebase - fcm
+	implementation 'com.google.firebase:firebase-admin:9.1.1'
 }
 
 tasks.named('test') {
