--- a/back/backend/src/main/resources/application.yml
+++ b/back/backend/src/main/resources/application.yml
@@ -14,14 +14,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
     open-in-view: false
 
   jackson:
-    property-naming-strategy: SNAKE_CASE
     time-zone: Asia/Seoul
 
 logging:
@@ -29,5 +25,9 @@ logging:
     root: INFO
     org.springframework.web: DEBUG
     com.backend: DEBUG
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
