--- a/back/backend/src/main/resources/application.yml
+++ b/back/backend/src/main/resources/application.yml
@@ -30,4 +30,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: health
+  endpoint:
+    health:
+      show-details: always
