chore:actuator 의존성 추가

--- a/back/backend/build.gradle
+++ b/back/backend/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 	// firebase - fcm
 	implementation 'com.google.firebase:firebase-admin:9.1.1'
+	// health 체킹 위한 actuator
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 tasks.named('test') {
