--- a/front/frontend/android/app/src/main/AndroidManifest.xml
+++ b/front/frontend/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <!-- 🍧 이미지 백업 시 필요한 권한 추가 -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
+
 
     <application
       android:name=".MainApplication"
