--- a/back/auth/src/main/resources/application.yml
+++ b/back/auth/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
           kakao:
             client-id: ${KAKAO_CLIENT_ID}
             #            client-secret: ${KAKAO_CLIENT_SECRET}       # “보안 강화형” 앱만 필요
-            redirect-uri: "${baseUrl}/auth/kakao/callback"
+            redirect-uri: "${baseUrl}/login/oauth2/code/kakao"
             authorization-grant-type: authorization_code
             #            client-authentication-method: POST
             scope: profile_nickname, account_email
