--- a/front/frontend/package.json
+++ b/front/frontend/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^7.3.12",
     "@react-navigation/stack": "^7.3.1",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
